Fix: footer agora salva no banco de dados e mapa exibe endereco cadastrado

--- a/templates/index.html
+++ b/templates/index.html
@@ -348,7 +348,7 @@
         </div>
     </div>
     <div class="map-container">
-        {% if footer and footer.contato and footer.contato.endereco %}
+        {% if footer and footer.contato and footer.contato.endereco and footer.contato.endereco.strip() %}
         <iframe 
             src="https://www.google.com/maps?q={{ footer.contato.endereco|urlencode }}&output=embed" 
             width="100%" 
