Padronizar tipos de serviço em todo o sistema com lista fixa

--- a/templates/admin/add_ordem.html
+++ b/templates/admin/add_ordem.html
@@ -30,8 +30,8 @@
             </label>
             <select id="servico" name="servico" required>
                 <option value="">Selecione um serviço</option>
-                {% for servico in servicos %}
-                <option value="{{ servico.nome }}">{{ servico.nome }}</option>
+                {% for tipo in tipos_servico %}
+                <option value="{{ tipo }}">{{ tipo }}</option>
                 {% endfor %}
             </select>
         </div>
