--- a/templates/agendamento.html
+++ b/templates/agendamento.html
@@ -89,8 +89,8 @@
                         </label>
                         <select id="tipo_servico" name="tipo_servico" required>
                             <option value="">Selecione o serviço</option>
-                            {% for servico in servicos %}
-                            <option value="{{ servico.nome }}">{{ servico.nome }}</option>
+                            {% for tipo in tipos_servico %}
+                            <option value="{{ tipo }}">{{ tipo }}</option>
                             {% endfor %}
                         </select>
                     </div>
