--- a/templates/index.html
+++ b/templates/index.html
@@ -414,6 +414,7 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 .slider-wrapper {
@@ -422,6 +423,7 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 .slide {
@@ -548,15 +550,18 @@ body {
     }
     
     .slide-image {
-        background-size: cover;
+        background-size: contain;
         background-position: center;
+        background-repeat: no-repeat;
     }
     
     .slide-image img {
         display: block !important;
         width: 100%;
-        height: 100%;
-        object-fit: cover;
+        height: auto;
+        max-height: 100%;
+        object-fit: contain;
+        object-position: center;
     }
 }
 
@@ -568,15 +573,18 @@ body {
     }
     
     .slide-image {
-        background-size: cover;
+        background-size: contain;
         background-position: center;
+        background-repeat: no-repeat;
     }
     
     .slide-image img {
         display: block !important;
         width: 100%;
-        height: 100%;
-        object-fit: cover;
+        height: auto;
+        max-height: 100%;
+        object-fit: contain;
+        object-position: center;
     }
 }
 
