--- a/templates/index.html
+++ b/templates/index.html
@@ -486,7 +486,7 @@ body {
     height: 100%;
     object-fit: cover;
     object-position: center;
-    display: block;
+    display: none; /* Escondido por padrão, JavaScript mostrará no mobile */
 }
 
 .slide-link .slide-image {
@@ -543,46 +543,24 @@ body {
         min-height: 250px;
         display: block !important;
         visibility: visible !important;
-        height: auto !important;
     }
     
-    .slider-container {
-        height: auto;
-        position: relative;
-    }
-    
-    .slider-wrapper {
-        height: auto;
-        position: relative;
-    }
-    
-    .slide {
-        position: relative;
-        height: auto;
-        min-height: 250px;
+    .slider-indicators {
+        bottom: 15px;
     }
     
     .slide-image {
         background-size: contain;
         background-position: center;
         background-repeat: no-repeat;
-        position: relative;
-        height: auto;
-        padding-bottom: 0;
     }
     
     .slide-image img {
         display: block !important;
         width: 100%;
-        height: auto;
-        max-height: none;
+        height: 100%;
         object-fit: contain;
         object-position: center;
-    }
-    
-    .slider-indicators {
-        bottom: 5px;
-        position: absolute;
     }
 }
 
@@ -591,32 +569,22 @@ body {
         min-height: 200px;
         display: block !important;
         visibility: visible !important;
-        height: auto !important;
     }
     
     .slider-indicators {
-        bottom: 5px;
-    }
-    
-    .slide {
-        position: relative;
-        height: auto;
-        min-height: 200px;
+        bottom: 12px;
     }
     
     .slide-image {
         background-size: contain;
         background-position: center;
         background-repeat: no-repeat;
-        position: relative;
-        height: auto;
     }
     
     .slide-image img {
         display: block !important;
         width: 100%;
-        height: auto;
-        max-height: none;
+        height: 100%;
         object-fit: contain;
         object-position: center;
     }
