Alterar texto da hero section: 'Assistência Técnica Especializada e Técnico Certificado'

--- a/templates/index.html
+++ b/templates/index.html
@@ -117,7 +117,7 @@
             </div>
             <h1 class="hero-title">
                 <span class="gradient-text">Assistência Técnica</span><br>
-                de Eletrodomésticos, Celulares, Computadores e Notebooks
+                Especializada e Técnico Certificado
             </h1>
             <p class="hero-description">
                 Soluções rápidas, profissionais e com garantia. 
